--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -43,5 +43,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+    <key>NSPhotoLibraryAddUsageDescription </key>
+    <string>Need access to photos to save images to gallery</string>
 </dict>
 </plist>
